Version 0.4 (released 2009-06-18)

 * feature: support tag renaming (issue #17)
 * feature: allow entry duplication (issue #34)
 * feature: allow entry date tweaking (issue #33)
 * fix: loading entry should reposition calendar focus (issue #32)
 * fix: global author name not used when previewing/printing (issue #36)

Version 0.3 (released 2008-07-04)

 * feature: add "check for updates" support
 * fix: support international character (issue #24)
 * fix: tag support not working on Python 2.3 (issue #25)

Version 0.2 (released 2008-05-19)

 * feature: multiple entries per day (issue #1)
 * feature: heirarchical entry tags (issues #2, #3, #11)
 * feature: optional global (vs. per-entry) authors (issue #7)
 * feature: automatically append .tkj to diary file names (issue #6)
 * fix: bugs related to forcing save/revert of modified files
 * fix: font change shouldn't mark diary as modified (issue #20)
 * fix: font selection cancellation bug (issue #18)
 * fix: make file writes atomic (issue #8)
 * fix: consistently apply busy cursor handling logic
 * fix: stale entry form on entry removal (issue #9)

Version 0.1 (released 2008-03-24)

 * initial release